# newsletter_crew

./: README.md  newsletter.md  pyproject.toml
src/newsletter_crew/: crew.py  main.py
src/newsletter_crew/config/: agents.yaml  tasks.yaml
